feat: restructure canvas platform modules